add responsiveness and reviews

--- a/index2.html
+++ b/index2.html
@@ -290,24 +290,24 @@
 					<h2><small>Testimonials</small>What Our Clients Say</h2>
 					<div class="testimonial-slider owl-carousel">
 						<div class="testimonial">
-							<div class="quote">Mountaineer barely kept his family fed. Well the first thing you know ol' Jeds a millionaire. said Jed move away from there.</div>
+							<div class="quote">"I recently used Swiftclean and I couldn't be happier with their service! From the initial call to the finished job, everything was handled professionally and efficiently. Thank you so much!"</div>
 							<div class="author">
 								<div class="image"><img src="images/testimonial2.png" alt="Chris Evans" class="img-responsive"></div>
-								<h6>Hendric Zik</h6>
+								<h6>Jane Smith</h6>
 							</div> <!-- end .author -->
 						</div> <!-- end .testimonial -->
 						<div class="testimonial">
-							<div class="quote">Mountaineer barely kept his family fed. Well the first thing you know ol' Jeds a millionaire. said Jed move away from there.</div>
+							<div class="quote">"I highly recommend Swiftclean for their excellent service and attention to detail. They were prompt, friendly and got the job done quickly!"</div>
 							<div class="author">
 								<div class="image"><img src="images/testimonial3.png" alt="Chris Evans" class="img-responsive"></div>
-								<h6>Mike Hizu</h6>
+								<h6>David Wilson</h6>
 							</div> <!-- end .author -->
 						</div> <!-- end .testimonial -->
 						<div class="testimonial">
-							<div class="quote">Mountaineer barely kept his family fed. Well the first thing you know ol' Jeds a millionaire. said Jed move away from there.</div>
+							<div class="quote">"I was very impressed. They were very thorough in their work and made sure everything was cleaned up afterwards. I would definitely use them again and recommend them to others. Thanks!"</div>
 							<div class="author">
 								<div class="image"><img src="images/testimonial1.png" alt="Chris Evans" class="img-responsive"></div>
-								<h6>Chris Evans</h6>
+								<h6>John Brown</h6>
 							</div> <!-- end .author -->
 						</div> <!-- end .testimonial -->
 					</div> <!-- end .testimonial-slider -->
@@ -330,7 +330,7 @@
 									<a href=""><i class="fa fa-google-plus"></i></a>
 								</div> <!-- end .footer-social-icons -->
 							</div> <!-- end .col-sm-3 -->
-							<div class="col-sm-6">
+							<div class="col-sm-6 contactInfo">
 								<h4>Contact Information</h4>
 								<div class="footer-contact clearfix">
 									<i class="icon-pointer"></i>
