--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 									</div>
 									<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 										<div class="panel-body">
-											<p>At Swiftclean, we pride ourselves on providing exceptional customer service. We believe in treating our customers with respect and honesty, and we always put your needs first. We offer flexible scheduling options to accommodate your busy schedule, and we always arrive on time and ready to work. We also provide ongoing maintenance services to ensure that your gutters are always in top condition. With our dedication to customer service, you can trust that you're getting the best service possible.</p>
+											<p>At Swiftclean, we pride ourselves on providing exceptional customer service. We believe in treating our customers with respect and honesty, and we always put your needs first. We offer flexible scheduling options to accommodate your busy schedule, and we always arrive on time and ready to work. We also provide ongoing maintenance services to ensure that your gutters are always in top condition.</p>
 										</div>
 									</div>
 								</div>
@@ -334,7 +334,7 @@
 								<h4>Contact Information</h4>
 								<div class="footer-contact clearfix">
 									<i class="icon-pointer"></i>
-									<div class="content">09 Design Street, Downtown, Sydney, Australia</div>
+									<div class="content">Cheltenham GL50 1QA</div>
 								</div> <!-- end .footer-contact -->
 								<div class="footer-contact clearfix">
 									<i class="icon-call-end"></i>
@@ -342,7 +342,7 @@
 								</div> <!-- end .footer-contact -->
 								<div class="footer-contact clearfix">
 									<i class="icon-envelope"></i>
-									<div class="content">Info@swiftclean.com</div>
+									<div class="content">info@swiftclean.com</div>
 								</div> <!-- end .footer-contact -->
 							</div> <!-- end .col-sm-3 -->
 						</div> <!-- end .row -->
